src/css/airvis.css
/* ... */
.airvis-select:hover .airvis-value { background-color: #ffffff;}
.airvis-select:hover .airvis-label { color: #ffffff;}
.airvis-selectBox { background-color: #ffffff; padding: 2px 0 3px; position: absolute; width: 50px; z-index: 1;

  -webkit-border-radius: 2px; 
  -moz-border-radius: 2px; 
  border-radius: 2px;

}
.airvis-selectBoxdown { top: 0; right: 0;}
.airvis-selectBoxup { bottom: 0; right: 0;}
.airvis-selectBox > a { display: block; text-align: center; font-size: 12px; font-weight: bold; text-decoration: none; color: #002a3a; line-height: 15px;}
.airvis-selectBox > a.active { color: #00aeef;}
/*
.airvis-selectBox > a:hover { color: #586971;}
.airvis-selectBox > a.active:hover { color: #6bc6f3;}
*/
.airvis-selectContainerFade .airvis-value { background-color: #537585;}
.airvis-selectContainerFade .airvis-label { color: #6d878f;}


/* sq animation border */
.airvis-slideSq { border: 1px solid #000000; position: absolute;}

/* TopBar */
.airvis-topbar { position: absolute; top: 0; left: 0; right: 0; height: 40px; background-color: rgba(0, 47, 64, 0.93); font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;}
.airvis-topbar-container { margin: 0 auto; width: 800px;}
.airvis-topbar-logo { background: transparent url("../img/logo.png") 0 0 no-repeat; display: block; float: left; height: 24px; margin: 8px 0 0 0; width: 216px;}
.airvis-topbar-items { display: block; float: left; margin: 0; padding: 0; margin-left: 70px;}
.airvis-topbar-items li { display: block; float: left; list-style: none outside none;}
.airvis-topbar-items a { display: block; margin-top: 8px; margin-left: 10px; padding: 0 11px; height: 24px;   text-decoration: none; font-size: 14px; font-weight: bold; line-height: 24px; color: #ffffff; background-color: transparent;

  -webkit-border-radius: 2px; 
  -moz-border-radius: 2px; 
  border-radius: 2px;

}
.airvis-topbar-items a.airvis-checked { background-color: rgba(255,255,255, 0.75); color: #002a3a; }
.airvis-topbar-items a:hover { background-color: #ffffff; color: #002a3a;	}

/* Title */
.airvis-title { padding: 20px; color: #ffffff; font-size: 16px; font-weight: bold; position: relative;}
.airvis-title h1 { font-size: 28px; line-height: 28px; margin: 0; padding: 0;}
.airvis-title .airvis-title-place { float: left; margin: 10px 30px 0 0;}
.airvis-title .airvis-title-date { float: left; margin: 10px 30px 0 0;}
.airvis-title .airvis-title-task { float: left; margin: 10px 30px 0 0;}

/* Ufos on the map */
.airvis-ufo {
	padding-top: 32px;
	padding-left: 16px;
	background: transparent url("/img/ufoFlyMedium.png") 0 0 no-repeat;
	white-space: nowrap;
}

